# os_lab1

./: CMakeLists.txt
include/: employee.h
src/: CMakeLists.txt  creator.cpp  main.cpp  reporter.cpp
tests/: test_employee.cpp
